src/syntax/parser/snapshots/hebi__syntax__parser__tests__binary_expr-16.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: "c",
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: "d",
                        },
                    ),
                },
            ),
        ),
    ],
}
