src/syntax/parser/snapshots/hebi__syntax__parser__tests__binary_expr-5.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Binary(
    Binary {
        op: Mul,
        left: GetVar(
            GetVar {
                name: Ident(
                    "a",
                ),
            },
        ),
        right: GetVar(
            GetVar {
                name: Ident(
                    "b",
                ),
            },
        ),
    },
)
