src/syntax/parser/snapshots/hebi__syntax__parser__tests__binary_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Binary(
    Binary {
        op: Add,
        left: GetVar(
            GetVar {
                name: "a",
            },
        ),
        right: GetVar(
            GetVar {
                name: "b",
            },
        ),
    },
)
