src/syntax/parser/snapshots/hebi__syntax__parser__tests__call_expr-3.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
expected `=`
| a(b=c, d[4;31m)[0m


